--- a/resources/static/adc_default.css
+++ b/resources/static/adc_default.css
@@ -14,6 +14,10 @@
     max-width: 90%;
     height : 50px;
 }
+.adc-default input[type=number],
+.adc-default .thousand {
+    text-align: right;
+}
 .adc-default .askia-response-label {
     margin-left: 0 !important;
 }
