--- a/resources/dynamic/default.css
+++ b/resources/dynamic/default.css
@@ -40,12 +40,17 @@ EndIf
     background-color: rgba({%= Theme.WhiteColor %}) !important;
 }
 {% EndIf %}
+@media screen and (max-width: 800px) {
+    #adc_{%= CurrentADC.InstanceId%} .askia-response:hover {
+        background-color: transparent;
+    }
+}
 #adc_{%= CurrentADC.InstanceId%} .askia-response img {
 	max-width:100%;
 }
 #adc_{%= CurrentADC.InstanceId %} input[readonly=readonly],
 #adc_{%= CurrentADC.InstanceId %} textarea[readonly=readonly] {
-    background-color: rgba({%= Theme.BlackColor.ToRGB() %},0.05);
+    background-color: rgba({%= Theme.BlackColor.ToRGB() %},0.05) !important;
 }
 
 {% If (CurrentADC.PropValue("columnsCount").ToNumber() > 1 ) Then %}
