--- a/resources/dynamic/default.css
+++ b/resources/dynamic/default.css
@@ -8,7 +8,7 @@ Else
     controlAlign = "0 auto 10px 0"
 EndIf
 %}
-{% If (CurrentQuestion.Type = "numeric" or CurrentQuestion.Type = "open" ) Then %}
+{% If (CurrentQuestion.Type = "numeric" or CurrentQuestion.Type = "open" or CurrentQuestion.Type = "datetime" ) Then %}
 #adc_{%= CurrentADC.InstanceId %} {
     text-align: {%= CurrentADC.PropValue("controlAlign") %};
 }
@@ -29,13 +29,18 @@ EndIf
 }
 {% EndIf %}
 {% If (CurrentQuestion.Type = "datetime" ) Then %}
-#adc_{%= CurrentADC.InstanceId %} .RLDatePicker, #adc_{%= CurrentADC.InstanceId %} .RLTimePicker {
+#adc_{%= CurrentADC.InstanceId %} .RLDatePicker,
+#adc_{%= CurrentADC.InstanceId %} .RLTimePicker {
     margin: {%= controlAlign %};
 }
-#adc_{%= CurrentADC.InstanceId %} .RLTimePicker select {
+#adc_{%= CurrentADC.InstanceId %} .select select,
+#adc_{%= CurrentADC.InstanceId %} .RLTimePicker select:not([disabled=disabled]) {
     color: rgba({%= Theme.BlackColor %}) !important;
+    background-color: rgba({%= Theme.WhiteColor %}) !important;
 }
-#adc_{%= CurrentADC.InstanceId %} .RLTimePicker option {
+#adc_{%= CurrentADC.InstanceId %} .RLTimePicker,
+#adc_{%= CurrentADC.InstanceId %} .RLTimePicker option,
+#adc_{%= CurrentADC.InstanceId %} .select option {
     color: rgba({%= Theme.BlackColor %}) !important;
     background-color: rgba({%= Theme.WhiteColor %}) !important;
 }
@@ -49,8 +54,12 @@ EndIf
 	max-width:100%;
 }
 #adc_{%= CurrentADC.InstanceId %} input[readonly=readonly],
-#adc_{%= CurrentADC.InstanceId %} textarea[readonly=readonly] {
-    background-color: rgba({%= Theme.BlackColor.ToRGB() %},0.05) !important;
+#adc_{%= CurrentADC.InstanceId %} textarea[readonly=readonly],
+#adc_{%= CurrentADC.InstanceId %} .RLTimePicker select[disabled=disabled],
+#adc_{%= CurrentADC.InstanceId %} .RLTimePicker select[disabled=disabled] + span[class^="timeSeparator_"],
+#adc_{%= CurrentADC.InstanceId %} .RLTimePicker select[disabled=disabled] + .secsContainer span[class^="timeSeparator_"],
+#adc_{%= CurrentADC.InstanceId %} input[readonly=readonly] + .imperial {
+    background-color: rgba({%= Theme.BlackColor.ToRGB() %},0.05);
 }
 
 {% If (CurrentADC.PropValue("columnsCount").ToNumber() > 1 ) Then %}
@@ -153,7 +162,7 @@ EndIf
     background: rgb({%= Theme.SecondaryColor.ToRGB() %});
 }
 {% If (CurrentADC.PropValue("numUseInput") = "1") Then %}
-#adc_{%= CurrentADC.InstanceId %} [id^=askia-input-number] {
+#adc_{%= CurrentADC.InstanceId %} [id^=askia-input-number]:not(.dkbutton) {
     display: none;
 }
 #adc_{%= CurrentADC.InstanceId %} label.numericDK {
