--- a/resources/static/adc_default.css
+++ b/resources/static/adc_default.css
@@ -36,10 +36,10 @@ body {
     break-inside: avoid; /* IE 10+ */
 }
 .adc-default .askia-response {
-    display: flex;
+    /* display: flex;
     display: -ms-flexbox;
     justify-content: stretch;
-    align-items: center;
+    align-items: center; */
 }
 @media screen and (min-width:0\0) {
     /* IE9 and IE10 rule sets go here */
