--- a/resources/static/adc_default.css
+++ b/resources/static/adc_default.css
@@ -240,7 +240,7 @@ body {
 
 .adc-default .otherText {
 	display:none;
-	/* margin:10px; */
+	margin: 5px 0 0 0;
 	padding:5px;
 
 	/* disable highlight text */
