--- a/resources/dynamic/default.css
+++ b/resources/dynamic/default.css
@@ -12,13 +12,13 @@ Else
 EndIf
 %}
 
-/* .down-point::after {
+.down-point::after {
 	content: '\2BC6';
   font-weight: bold;
   float: left;
 	line-height: 1.02em;
   margin-right: 5px;
-} */
+}
 
 .right-point::after {
 	content: "\2BC8";
@@ -36,13 +36,13 @@ EndIf
   margin-right: 5px;
 }
 
-/* #adc_{%= CurrentADC.InstanceId %} .down-point {
+#adc_{%= CurrentADC.InstanceId %} .down-point {
 	content: '\2BC6';
   font-weight: bold;
   float: left;
 	line-height: 1.02em;
   margin-right: 5px;
-} */
+}
 
 {% If (CurrentQuestion.Type = "numeric" or CurrentQuestion.Type = "numeric-loop" or CurrentQuestion.Type = "open" or CurrentQuestion.Type = "datetime" ) Then %}
 #adc_{%= CurrentADC.InstanceId %} {
