--- a/resources/dynamic/default.css
+++ b/resources/dynamic/default.css
@@ -17,6 +17,10 @@ Else
 EndIf
 %}
 
+.test-info {
+  color:red !important;
+}
+
 .focused {
   background-color: rgba(40,59,73, .2) !important;
   cursor: pointer;
@@ -338,4 +342,34 @@ EndIf
 #adc_{%= CurrentADC.InstanceId%} .multiSelect
 {
   height: auto !important;
+}
+
+.r-tag {
+  background-color: {%= Theme.PrimaryDarkColor.ToHexa() %};
+  color: {%= Theme.WhiteColor.ToHexa() %};
+  display: inline-block;
+  padding-left: 6px;
+  padding-right: 6px;
+  text-align: center;
+  border-radius: 0.1875em;
+}
+
+.routing-info {
+  position: absolute;
+  background-color: beige;
+  /* border: 0.5px solid grey; */
+  color: {%= Theme.BlackColor.ToHexa() %};;
+  display: inline-block;
+  padding-left: 6px;
+  padding-right: 6px;
+  text-align: center;
+  /* border-radius: 0.1875em; */
+  font-size: initial;
+  /* border: 6px solid black;
+  border-color: transparent transparent transparent black; */
+}
+
+.i-tag {
+  font-size: initial;
+  margin-left: 0.1em;
 }
